# py_web_engineering_hw8

./: .gitignore  Dockerfile  README  client.py  config.ini  data_processing.py  main.py  mongo_data_handler.py  proxy_server.py  pyproject.toml
conf/: database.py
data_selects/: find.py
data_to_database/: authors.json
models/: models.py
newsletter/: consumer_email.py  consumer_sms.py  models.py  producer.py  seeds.py
newsletter/conf/: database.py
statics/: script.js  styles.css
templates/: error.html  index.html
