[tool.poetry]
name = "py-engineering-hw8"
version = "0.1.0"
description = ""
authors = ["Abboth <Alexmikhailov90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {version = "3.12", extras = ["srv"]}
mongoengine = "^0.29.1"
redis = "^5.2.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
